# CfIspProxy

./: package-lock.json  package.json  pyproject.toml  vitest.config.js  wrangler.toml
data/: preferred-ips.txt
docs/superpowers/plans/: 2026-06-22-stage1-worker.md  2026-06-22-stage15-preferred-ip.md
docs/superpowers/specs/: 2026-06-22-cfispproxy-design.md
test/: iplist.test.js  routing.test.js  socks5.test.js  subscription.test.js  vless.test.js
tools/personalize/: README.md  inject.py  main.py  obfuscate.py
tools/personalize/tests/: test_generate.py  test_inject.py  test_obfuscate.py
tools/preferred_ip/: README.md  cf_ipv4.txt  scan.py  scanner.py
tools/preferred_ip/tests/: test_scanner.py
worker/: README.md  worker.js
